deployment/app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: more-cars-frontend
          #image: docker.io/dennisgerike/more-cars-frontend:latest
          image: ghcr.io/more-cars/frontend:latest
          resources:
            requests:
              cpu: "125m"
              memory: "700Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
