deployment/app/frontend-https-public-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-public-https
  namespace: prod
spec:
  parentRefs:
    - name: more-cars-gateway
      sectionName: more-cars-public-https

  hostnames:
    - more-cars.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
