deployment/app/frontend-https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-https
spec:
  parentRefs:
    - name: more-cars-gateway
      sectionName: more-cars-https

  hostnames:
    - frontend.default.more-cars.internal

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
