deployment/app/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: testing
spec:
  tls:
    - hosts:
        - testing.frontend.more-cars.internal
      secretName: certificate-frontend
  rules:
    - host: testing.frontend.more-cars.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
